add new instrument work type along with related metadata fields
