# app/controllers/dashboard/form/publish_controller.rb
@@ -115,6 +115,17 @@ module Dashboard
               :published_date,
               :depositor_agreement,
               :draft_curation_requested,
+              :owner,
+              :manufacturer,
+              :model,
+              :instrument_type,
+              :measured_variable,
+              :available_date,
+              :decommission_date,
+              :related_identifier,
+              :alternative_identifier,
+              :instrument_resource_type,
+              :funding_reference,
               keyword: [],
               contributor: [],
               publisher: [],
