# app/models/work_version.rb
@@ -31,7 +31,18 @@ class WorkVersion < ApplicationRecord
                  identifier: [:string, array: true, default: []],
                  based_near: [:string, array: true, default: []],
                  related_url: [:string, array: true, default: []],
-                 source: [:string, array: true, default: []]
+                 source: [:string, array: true, default: []],
+                 owner: :string,
+                 manufacturer: :string,
+                 model: :string,
+                 instrument_type: :string,
+                 measured_variable: :string,
+                 available_date: :string,
+                 decommission_date: :string,
+                 related_identifier: :string,
+                 alternative_identifier: :string,
+                 instrument_resource_type: :string,
+                 funding_reference: :string
 
   belongs_to :work,
              inverse_of: :versions
@@ -227,6 +238,17 @@ class WorkVersion < ApplicationRecord
     rights
     subtitle
     version_name
+    owner
+    manufacturer
+    model
+    instrument_type
+    measured_variable
+    available_date
+    decommission_date
+    related_identifier
+    alternative_identifier
+    instrument_resource_type
+    funding_reference
   ].each do |field|
     define_method "#{field}=" do |val|
       super(val.presence)
